# local-bi

./: .gitignore  AGENTS.md  README.md  directory.txt  pyproject.toml
connections/: processing.py  schemas.py
connections/klaviyo/: __init__.py  profiles.py  segments.py
connections/landl_db/: __init__.py  customers.py  get_listing_tags.py  listings.py  order_lines.py  orders.py  stock_daily.py  variants.py
connections/local/: master_sku.py
connections/searchspring/: __init__.py  collections.py
connections/shopify/: __init__.py  badges.py  tags.py
projects/klaviyo-analysis/: extract-all.py
projects/klaviyo-analysis/frontend/: index.html  style.css
projects/klaviyo-analysis/scripts/: build_customers.py  create-sales-segment.py  feature_customers.py  feature_orders.py  feature_segements.py
projects/merchandising-analysis/: BEFORE-merchandising_report.html  config.py  extract.py  merchandising_report.html  run_report.py
projects/merchandising-analysis/scripts/: build_collection_analysis.py  build_listing_sales.py  build_report.py  build_summary_stats.py  build_variant_sales.py
projects/merchandising-analysis/templates/: report.html  styles.css
projects/order-sheet-entry/: CLAUDE.md  README.md  order-transformation.py
projects/order-sheet-entry/util_and_tests/: MS-dupe-check.py  __init__.py  contact_matching.py  csv_utils.py  master_data.py  transform.py
projects/shopify-maintenance/: stale_new_removal.py
projects/shopify-maintenance/process/: best-seller-check.py
projects/shopify-maintenance/tests/: test_sale_new_removal.py
(+7 files in other folders)
